# QmlMaterial

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  flake.nix  update_icon_code.sh
.github/: FUNDING.yml
.github/workflows/: build-windows.yml  ci.yml  doxygen.yml
assets/shader/: blur_mask.frag  blur_mask.vert  common.glsl  default.vert  rect_glow.frag  rectangle.frag  rectangle.vert  ripple.frag  round.frag  round_clip.frag  sdf.glsl  sdf_rectangle.frag  shadow.frag  shadow.vert  shadow_.frag
cmake/: qml_material-config.cmake.in
doc/: Doxyfile
example/: About.qml  CMakeLists.txt  Color.qml  Components.qml  Effect.qml  Elevation.qml  Example.qml  Main.qml  Shadow.qml  Shape.qml  Typography.qml  flake.nix  main.cpp  main.qml
example-nix/: CMakeLists.txt  flake.nix  main.cpp  main.qml
example/carousel/: CarouselDemoData.qml
include/qml_material/: color.h  core.h  core.hpp  corner.h  elevation.h  enum.h  enum.hpp  export.h  export.hpp  helper.hpp  icon.h  log.h  qml_util.h  rectangle.h  snake_model.h  state.h  state_holder.h  theme.h  theme.hpp  token.h  type_scale.h  util.h
qml/: ActionMenu.qml  ActionToolBar.qml  AppBar.qml  BarItem.qml  Button.qml  ButtonGroup.qml  Card.qml  CircleProgress.qml  CircleProgressBar.qml  CircularIndicator.qml  ComboBox.qml  Dialog.qml  Divider.qml  Drawer.qml  DrawerItem.qml  FAB.qml  FilterChip.qml  Flickable.qml  FlickablePane.qml  FontMetrics.qml  GridView.qml  Icon.qml  IconButton.qml  IconLabel.qml  Image.qml  InputChip.qml  Label.qml  ListItem.qml  ListView.qml  Menu.qml  MenuItem.qml  NavBar.qml  Page.qml  Pane.qml  Popup.qml  RailItem.qml  Rectangle.qml  ScrollPage.qml  SearchBar.qml  Slider.qml  (+14 more)
qml/component/: FontMetrics.qml  Image.qml  Label.qml  Loader.qml  MState.qml  Shape.qml  TableView.qml  Text.qml  TextEdit.qml  TextField.qml  TextFieldEmbed.qml  TextInput.qml  TextMetrics.qml
qml/componentEx/: ActionLabel.qml  ColorRadio.qml  DragHandle.qml  Icon.qml  IconLabel.qml  IconSvg.qml  SdfRectangle.qml  SnakeView.qml  Space.qml
qml/control/: Action.qml  ActionGroup.qml  ApplicationWindow.qml  BottomSheet.qml  BusyIndicator.qml  BusyIndicatorShape.qml  Button.qml  Carousel.qml  CheckBox.qml  ComboBox.qml  Dialog.qml  DialogButtonBox.qml  Drawer.qml  HorizontalHeaderView.qml  HorizontalHeaderViewDelegate.qml  ItemDelegate.qml  Label.qml  Menu.qml  MenuItem.qml  MenuSeparator.qml  Page.qml  PageIndicator.qml  Pane.qml  Popup.qml  RadioButton.qml  ScrollBar.qml  SegmentedButton.qml  SegmentedButtonGroup.qml  Slider.qml  SliderM2.qml  SplitButton.qml  SplitButtonIndicator.qml  SplitView.qml  StackView.qml  Switch.qml  TabBar.qml  TabButton.qml  TableViewDelegate.qml  ToolSeparator.qml  ToolTip.qml  (+2 more)
qml/controlEx/: ActionToolBar.qml  AppBar.qml  AssistChip.qml  BusyButton.qml  BusyIconButton.qml  Card.qml  CircularIndicator.qml  DrawerItem.qml  EmbedChip.qml  FAB.qml  IconButton.qml  LinearIndicator.qml  RailItem.qml  StandardDrawer.qml  StandardIconButton.qml
qml/delegate/: ListGridBaseDelegate.qml  ListItem.qml  SliderHandle.qml  SliderHandleM2.qml
qml/flickable/: Flickable.qml  FlickablePane.qml  GridView.qml  HorizontalListView.qml  ListView.qml  TableView.qml  VerticalFlickable.qml  VerticalGridView.qml  VerticalListView.qml
qml/impl/: CircleIndicatorShape.qml  CircleProgressShape.qml  CursorDelegate.qml  Elevation.qml  ElevationEffect.qml  ElevationRectangle.qml  ElevationRectangleBorder.qml  FloatingPlaceholderText.qml  ItemHolder.qml  LinearIndicatorShape.qml  ListBusyFooter.qml  RectangularGlow.qml  Ripple2.qml  RoundClip.qml  Shadow.qml  Shape.qml  SliderHandle.qml  State.qml  TextFieldEmbed.qml
qml/internal/: BoxShadow.qml  CircleProgressShape.qml  Elevation.qml  ElevationRectangle.qml  FilledTextFiledShape.qml  LinearIndicatorShape.qml  OutlineTextFiledShape.qml  Rectangle.qml  Ripple2.qml  RoundPath.qml  Shape.qml  SliderHandle.qml
qml/js/: jsUtils.mjs
qml/motion/: FadeInMotion.qml  FadeInThroughMotion.qml  FadeOutMotion.qml  FadeOutThroughMotion.qml
qml/scroll/: ScrollIndicator.qml
qml/state/: State.qml  StateAppBar.qml  StateAssistChip.qml  StateBarItem.qml  StateBottomSheet.qml  StateButton.qml  StateCard.qml  StateCarousel.qml  StateCarouselItem.qml  StateCheckBox.qml  StateComboBox.qml  StateDragHandle.qml  StateDrawerItem.qml  StateEmbedChip.qml  StateFAB.qml  StateFilterChip.qml  StateIconButton.qml  StateInputChip.qml  StateListItem.qml  StateMenuItem.qml  StateRadioButton.qml  StateRailItem.qml  StateSearchBar.qml  StateSegmentedButton.qml  StateSlider.qml  StateSliderM2.qml  StateSnakeBar.qml  StateSplitButton.qml  StateSplitButtonIndicator.qml  StateStandardIconButton.qml  StateSuggestionChip.qml  StateSwitch.qml  StateTabButton.qml  StateTableViewDelegate.qml  StateTextField.qml
src/: color.cpp  corner.cpp  elevation.cpp  enum.cpp  helper.cpp  icon.cpp  image.cpp  input_block.cpp  item_holder.cpp  page_context.cpp  plugin.cpp  qml_util.cpp  rectangle.cpp  round_item.cpp  snake_model.cpp  state.cpp  state_holder.cpp  theme.cpp  token.cpp  util.cpp
src/android/: android.cpp
src/anim/: circular_indicator_updator.cpp  linear_indicator_updator.cpp  loading_indicator_updator.cpp
src/carousel/: carousel_attached.cpp  carousel_keylines.cpp  carousel_scroll_strategy.cpp  (+2 more)
tests/: CMakeLists.txt  README.md  ToolbarDynamicHost.qml  carousel_engine_defaults.cpp  fullscreen_layout.cpp  grab.sh  hero_center_end.cpp  hero_start_layout.cpp  model_data_changed.cpp  model_shrink.cpp  multi_browse_layout.cpp  qm_grab.cpp  set_current_index_sync.cpp  toolbar_dynamic_visibility.cpp  toolbar_dynamic_visibility.qml  uncontained_layout.cpp
tests/scenes/: action_progress.qml  bottom_sheet.qml  button.qml  carousel.qml  colorpicker.qml  colorpicker_button.qml  datepicker.qml  elevation.qml  flickable2.qml  focus_button.qml  focus_checkbox.qml  focus_chip.qml  focus_fab.qml  focus_iconbutton.qml  focus_radio.qml  focus_switch.qml  loading_indicator_shapes.qml  navigation_rail.qml  ripple.qml  ripple_phases.qml  shape.qml  table.qml  tooltip.qml  wave_progress.qml
(+204 files in other folders)
